Code refactoring with IntelliJ suggestions